--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,5 @@ ul#rec-list {min-height:200px;width: 90% !important;}
 .resizable {width:100%;min-height:200px;}
 .io-info {display:none;}
 #output-text {width:100%;min-height:200px;}
+.navbar .left {display:none;}
+.navbar, .subnavbar, .toolbar {background:#fff;}
