--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,5 @@ ul#rec-list {min-height:200px;width: 90% !important;}
 #show-file-overlay {display:none;}
 #stale-indicator {display:none;}
 .navbar-fixed .page>.searchbar, .navbar-fixed>.searchbar, .navbar-through .page>.searchbar, .navbar-through>.searchbar {top:48px;}
+.category {display:inline-block;}
+.item-link {display:inline-block;font-size:1.2em;padding:10px;}
