--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ ul#rec-list {min-height:200px;width: 90% !important;}
     top: 90px;
     left: 0;
     position: fixed;z-index:999;}
-#recipe {width:100% !important;margin-top:140px;border-top: 1px solid #ccc;}
+#recipe {border-top: 1px solid #ccc;}
 #workspace-wrapper{width:100%;}
 #rec-list li {display: inline-block;
     width: 80%;
@@ -45,7 +45,7 @@ ul#rec-list {min-height:200px;width: 90% !important;}
 #save-to-file {display:none;}
 #maximise-output {display:none;}
 .btn .btn-default {display:none;}
-.split-horizontal {width:100% !important;border-top: 1px solid #ccc;}
+.split-horizontal {border-top: 1px solid #ccc;}
 .resizable {width:100%;min-height:200px;}
 .io-info {display:none;}
 #output-text {width:100%;min-height:200px;}
