--- a/css/styles.css
+++ b/css/styles.css
@@ -23,13 +23,19 @@ ul#rec-list {min-height:200px;width: 90% !important;}
 .item-link {width:70%;}
 .list-block ul { overflow: scroll;
     -webkit-overflow-scrolling: touch;background: #2196f3;color:#fff;}
-#operations {max-height: 140px;
+#operations {max-height: 185px;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
     top: 90px;
     left: 0;
     position: fixed;z-index:999;}
-#recipe {border-top: 1px solid #ccc;}
+    .row .col-100  {margin-top:140px;border-top: 1px solid #ccc;}
+    @media (min-width: 1281px) {
+  
+        .row .tablet-40  {margin-top:0;}
+        .row .tablet-60  {margin-top:0;}
+      }
+
 #workspace-wrapper{width:100%;}
 #rec-list li {display: inline-block;
     width: 80%;
