--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,31 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     
     color: rgba(0,0,0,.54);
 }
+/* Chat */ 
+.messagebar .toolbar-inner {position:fixed;}
+.page .smart-select-page .toolbar{position:fixed;}
+.navbar-fixed .page-content {padding-bottom:20px;}
+.page .smart-select-page .toolbar {margin-top:0px !important;}
+.chat-message .clearfix {width:100%;}
+.messagebar-area{width:100%;}
+#message-to-send {height: 40px;
+    color: #333;
+    font-size: 16px;
+    border:0px; 
+    line-height: 22px;
+    width: 80%;
+  
+#sendMessage {width:100%}
+    .message-send-button {-webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        padding: 0 16px;
+        min-width: 48px;
+        line-height: 48px;
+        height: 48px;
+        background: #fff;
+        border: 0px;}
+        .send-link {background: #fff;
+    border: 0px;
+    width: 18%;
+    height: 40px;}
